# twyne-looping-economics

./: .gitignore  CLAUDE.md  README.md  app.py  credit_flow.html  pyproject.toml  requirements.txt
data/: stETH-ETH_historical_APR_data.csv
docs/: PROGRESS.md  README.md
docs/technical-notes/: detailed_sheet_technical_doc.tex
notebooks/: analysis.ipynb
twyne_looping/: __init__.py  backtest.py  data.py  economics.py  live_rates.py  visualizations.py
