[project]
name = "twyne-looping"
version = "0.1.0"
description = "Economics analysis toolkit for Twyne protocol's boosted looping strategy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
twyne-dashboard = "app:main"

[dependency-groups]
dev = []
